# EngineExperiments

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: cmake.yml
datastructures/: fixed_vector.h  optional.h  vector.h
engine/: utils.h  window.h
engine/backend/vulkan/: formatters.h  renderer.cpp  renderer.h
engine/platform/windows/: utils.cpp  utils.h  window.cpp  window.h
engine/platform/windows/backend/vulkan/: renderer.cpp
io/: file.cpp  file.h
math/: math.h
meta/cmake/: vulkan_utils.cmake
shaders/: triangle.frag.glsl  triangle.vert.glsl
